tests/invalid/non_linear_record.eff
(* A record must be linear *)
type cow = {left : int; right : int}
let c = {left=42; left=23; right=42}


