tests/invalid/non_linear_record.eff.ref
Syntax error (file "./non_linear_record.eff", line 3, char 9):
Fields in a record must be distinct
